linkerd/require-linkerd-server/.chainsaw-test/good-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbserver
  template:
    metadata:
      labels:
        app: bbserver
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.35
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbserver
  template:
    metadata:
      labels:
        app: bbserver
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        ports:
        - containerPort: 80
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeploy03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbserver
  template:
    metadata:
      labels:
        app: bbserver
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.35
