linkerd/require-linkerd-server/.chainsaw-test/good-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: busybox
  name: goodsvc01
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bbserver
  type: ClusterIP
