linkerd/require-linkerd-server/.chainsaw-test/chainsaw-step-00-assert-1.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: servers.policy.linkerd.io
status:
  acceptedNames:
    kind: Server
    plural: servers
    singular: server
  storedVersions:
  - v1beta1
