linkerd/require-linkerd-server/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-linkerd-server
status:
  ready: true
