linkerd/require-linkerd-server/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-linkerd-server
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: chainsaw-step-00-assert-1.yaml
  - name: step-01
    try:
    - apply:
        file: ../require-linkerd-server.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-linkerd-server
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: server.yaml
  - name: step-03
    try:
    - apply:
        file: good-deploy.yaml
    - apply:
        file: good-svc.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-deploy.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-svc.yaml
